Fixed scrollbar showing up on larger screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,8 @@
  *= require_self
  */
 
+$breakpoint: 768px;
+ 
 body {
     font-size: 100%;
 }
